Shaping projects box fix the overflow issue

--- a/project/portfolio/src/assets/SCSS/base/_reset.scss
+++ b/project/portfolio/src/assets/SCSS/base/_reset.scss
@@ -7,7 +7,10 @@ html {
 body {
   margin: 0;
   width: 100vw;
+  height: 100%;
+  overflow-x: hidden;
 } /*remove default margin*/
+
 
 fieldset {
   border: none;
