--- a/project/portfolio/src/assets/SCSS/layout/_homeSection.scss
+++ b/project/portfolio/src/assets/SCSS/layout/_homeSection.scss
@@ -85,6 +85,10 @@
     h4 {
       margin-top: 32vh;
       margin-left: 7vw;
+      color: #ffffff;
+      background-color: $primaryColor;
+      text-align: center;
+      text-decoration: none;
     }
 
     article:first-child {
