--- a/project/portfolio/src/assets/SCSS/layout/_projectSection.scss
+++ b/project/portfolio/src/assets/SCSS/layout/_projectSection.scss
@@ -1,4 +1,37 @@
-#projectSection{
-  width: 90vw;
+#projectSection {
   height: 100vh;
+  @extend %displayFlexColumn;
+
+  header {
+    text-align: center;
+    margin-top: 5vh;
+  }
+
+  #projectBox {
+    @extend %displayFlexRow;
+    flex-wrap: wrap;
+    width: 100vw;
+    height: 70vh;
+
+    h4 {
+      text-align: center;
+      margin-bottom: 5vh;
+    }
+
+    button {
+      margin-bottom: 2vh;
+      margin-left: 1vw;
+    }
+  }
+
+}
+
+@media(max-width: $xs-screen) {
+  #projectSection {
+    #projectBox {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
 }
